Étape 3, monnaie libre : mécanisme du carré (4 cartes identiques), automatique
Complète le travail interrompu en plein milieu (trouvé non commité en début
de session : CardSquareEvent.java déjà écrit, dealStartingHandsForLibreIfNeeded
déjà étendu à 4 pioches, mais l'appelant GecoServer pas mis à jour - ne
compilait pas en l'état). Confirmé par l'utilisateur : encaissement
AUTOMATIQUE dès que 4 cartes identiques sont réunies, sans action du joueur.

- Fix de compilation : GecoServer.java mis à jour pour appeler
  dealStartingHandsForLibreIfNeeded avec le catalogue groupé par niveau
  (Map<String, List<String>>) plutôt que l'ancienne liste plate (faible
  seulement) - les 4 pioches (faible/moyenne/forte/tresforte) sont
  maintenant TOUTES préparées dès la mise en place (modèle simplifié, voir
  docs/04-etape3-catalogue-cartes.md : pas de rotation complexe des 4
  niveaux, confirmé par l'utilisateur).
- GameService.checkAndCashInSquares(gameId, playerId) : détecte un modèle à
  4+ exemplaires dans l'inventaire réel du joueur, remet les 4 cartes dans
  leur pioche de niveau, pioche 1 carte au hasard dans la pioche du niveau
  supérieur, pioche 4 nouvelles cartes dans la pioche d'origine - reproduit
  exactement rules.html ("il pioche une carte de valeur supérieure, se
  défausse de son carré... et pioche quatre nouvelles cartes de ce même
  paquet"). Boucle tant qu'un carré existe (cas rare mais possible : les 4
  cartes de remplacement pourraient elles-mêmes en compléter un autre).
  Appelée après CHAQUE transaction smartphone (recordTransaction, monnaie
  libre uniquement), pour le vendeur ET l'acheteur.
- Rupture technologique : la toute première fois qu'un carré fait entrer une
  carte "tresforte" en jeu pour cette partie, un événement
  XTECHNOLOGICAL_BREAKTHROUGH est enregistré EN PLUS - réutilise TEL QUEL le
  mécanisme déjà existant dans le moteur (StatsService, currentFactor *= 2),
  confirmé par l'utilisateur comme suffisant : pas de réordonnancement
  complex